--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemailer": "^6.9.7",
     "notiflix": "^3.2.6",
     "react": "^18",
+    "react-calendar": "^4.6.1",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
