--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
