--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-responsive": "^9.0.2",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "uuid": "^9.0.1",
     "yup": "^1.3.2"
@@ -35,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "sass": "^1.69.5",
