--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
@@ -37,6 +38,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
+    "@types/uuid": "^9.0.7",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "sass": "^1.69.5",
