--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
