--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "notiflix": "^3.2.6",
     "react": "^18",
     "react-calendar": "^4.6.1",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
