--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,7 +16,7 @@
     "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
-    "next": "^14.0.1",
+    "next": "14.2",
     "next-auth": "^4.24.6",
     "nodemailer": "^6.9.7",
     "notiflix": "^3.2.6",
