--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-player": "^2.16.0",
     "react-redux": "^8.1.3",
     "react-responsive": "^9.0.2",
     "react-toastify": "^9.1.3",
