--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/providers/nextAuthProvider.tsx", "src/app/api/auth/[...nextauth]/route.js", "src/Components/DataUsers/DataUserStepOne/DataUserStepOne.tsx", "src/app/actions/uploadAvatarActions.ts", "src/utils/authOptions.js", "jest.config.ts", "jest.setup.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/providers/nextAuthProvider.tsx", "src/app/api/auth/[...nextauth]/route.js", "src/Components/DataUsers/DataUserStepOne/DataUserStepOne.tsx", "src/app/actions/uploadAvatarActions.ts", "src/utils/authOptions.js", "jest.config.ts", "jest.setup.ts", "src/Components/UI/Chat/Chat.jsx", "src/Components/UI/Chat/ChatContent.jsx", "src/app/actions/chatAi.js"],
   "exclude": ["node_modules"]
 }
